# mini_gepa

./: .gitignore  Readme.md  pyproject.toml
diagrams/: gepa_arc_helpers.dot  gepa_iteration_full.dot
examples/demo/: aime_demo.py
mini_gepa/: __init__.py  adapter.py  core.py  openai_async.py  pareto.py  persistence.py  sampler.py  types.py
simple_gepa/: core.py  openai_async.py  pareto.py  persistence.py
